syntax = "proto3";

package agent;

option go_package = "jas-agent/api/proto";

// Agent服务定义
service AgentService {
  // 单次对话请求
  rpc Chat(ChatRequest) returns (ChatResponse);
  
  // 流式对话请求
  rpc StreamChat(ChatRequest) returns (stream ChatStreamResponse);
  
  // 获取可用的Agent类型
  rpc ListAgentTypes(Empty) returns (AgentTypesResponse);
  
  // 获取可用的工具列表
  rpc ListTools(Empty) returns (ToolsResponse);
}

// 空消息
message Empty {}

// Agent类型枚举
enum AgentType {
  REACT = 0;      // ReAct Agent
  CHAIN = 1;      // Chain Agent
  PLAN = 2;       // Plan Agent
  SQL = 3;        // SQL Agent
}

// 对话请求
message ChatRequest {
  string query = 1;                  // 用户查询
  AgentType agent_type = 2;          // Agent类型
  string model = 3;                  // 模型名称 (e.g., "gpt-3.5-turbo")
  string system_prompt = 4;          // 系统提示词（可选）
  int32 max_steps = 5;               // 最大执行步数
  map<string, string> config = 6;    // 额外配置
  string session_id = 7;             // 会话ID（用于保持上下文）
}

// 对话响应
message ChatResponse {
  string response = 1;               // Agent响应
  string agent_type = 2;             // 使用的Agent类型
  ExecutionMetadata metadata = 3;    // 执行元数据
  bool success = 4;                  // 是否成功
  string error = 5;                  // 错误信息
}

// 流式对话响应
message ChatStreamResponse {
  enum MessageType {
    THINKING = 0;      // 思考中
    ACTION = 1;        // 执行动作
    OBSERVATION = 2;   // 观察结果
    FINAL = 3;         // 最终答案
    ERROR = 4;         // 错误
    METADATA = 5;      // 元数据
  }
  
  MessageType type = 1;              // 消息类型
  string content = 2;                // 消息内容
  int32 step = 3;                    // 当前步骤
  ExecutionMetadata metadata = 4;    // 执行元数据
}

// 执行元数据
message ExecutionMetadata {
  int32 total_steps = 1;             // 总步骤数
  int32 tools_called = 2;            // 调用的工具数量
  repeated string tool_names = 3;    // 使用的工具名称
  int64 execution_time_ms = 4;       // 执行时间（毫秒）
  string state = 5;                  // 执行状态
}

// Agent类型列表响应
message AgentTypesResponse {
  repeated AgentTypeInfo types = 1;
}

// Agent类型信息
message AgentTypeInfo {
  AgentType type = 1;
  string name = 2;
  string description = 3;
  bool available = 4;
}

// 工具列表响应
message ToolsResponse {
  repeated ToolInfo tools = 1;
}

// 工具信息
message ToolInfo {
  string name = 1;
  string description = 2;
  string type = 3;  // Normal 或 Mcp
}

