package server

import (
	"encoding/json"
	"fmt"
	"net/http"
	"time"

	pb "jas-agent/api/proto"
	"jas-agent/core"

	"github.com/gorilla/mux"
	"github.com/gorilla/websocket"
)

// HTTPGateway HTTPç½‘å…³ï¼Œå°†HTTPè¯·æ±‚è½¬æ¢ä¸ºgRPCè°ƒç”¨
type HTTPGateway struct {
	grpcServer *AgentServer
	upgrader   websocket.Upgrader
}

// NewHTTPGateway åˆ›å»ºæ–°çš„HTTPç½‘å…³
func NewHTTPGateway(grpcServer *AgentServer) *HTTPGateway {
	return &HTTPGateway{
		grpcServer: grpcServer,
		upgrader: websocket.Upgrader{
			CheckOrigin: func(r *http.Request) bool {
				return true // å…è®¸æ‰€æœ‰æ¥æºï¼ˆç”Ÿäº§ç¯å¢ƒåº”è¯¥é™åˆ¶ï¼‰
			},
		},
	}
}

// SetupRoutes è®¾ç½®HTTPè·¯ç”±
func (gw *HTTPGateway) SetupRoutes() *mux.Router {
	router := mux.NewRouter()

	// APIè·¯ç”±
	api := router.PathPrefix("/api").Subrouter()

	// CORSä¸­é—´ä»¶
	router.Use(gw.corsMiddleware)

	// å¯¹è¯æ¥å£
	api.HandleFunc("/chat", gw.handleChat).Methods("POST", "OPTIONS")

	// WebSocketæµå¼å¯¹è¯
	api.HandleFunc("/chat/stream", gw.handleStreamChat)

	// è·å–Agentç±»å‹
	api.HandleFunc("/agents", gw.handleListAgents).Methods("GET", "OPTIONS")

	// è·å–å·¥å…·åˆ—è¡¨
	api.HandleFunc("/tools", gw.handleListTools).Methods("GET", "OPTIONS")

	// é™æ€æ–‡ä»¶æœåŠ¡ï¼ˆå‰ç«¯ï¼‰
	// ç”Ÿäº§ç¯å¢ƒä½¿ç”¨æ„å»ºåçš„æ–‡ä»¶ï¼Œå¼€å‘ç¯å¢ƒå¯ä»¥ç›´æ¥æœåŠ¡ web ç›®å½•
	router.PathPrefix("/").Handler(http.FileServer(http.Dir("./web/dist")))

	return router
}

// handleChat å¤„ç†å•æ¬¡å¯¹è¯è¯·æ±‚
func (gw *HTTPGateway) handleChat(w http.ResponseWriter, r *http.Request) {
	if r.Method == "OPTIONS" {
		w.WriteHeader(http.StatusOK)
		return
	}

	var req ChatRequestHTTP
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		gw.sendError(w, http.StatusBadRequest, "Invalid request body")
		return
	}

	// è½¬æ¢ä¸ºgRPCè¯·æ±‚
	grpcReq := &pb.ChatRequest{
		Query:        req.Query,
		AgentType:    gw.parseAgentType(req.AgentType),
		Model:        req.Model,
		SystemPrompt: req.SystemPrompt,
		MaxSteps:     int32(req.MaxSteps),
		Config:       req.Config,
		SessionId:    req.SessionID,
	}

	// è°ƒç”¨gRPCæœåŠ¡
	resp, err := gw.grpcServer.Chat(r.Context(), grpcReq)
	if err != nil {
		gw.sendError(w, http.StatusInternalServerError, err.Error())
		return
	}

	// è½¬æ¢å“åº”
	httpResp := ChatResponseHTTP{
		Response:  resp.Response,
		AgentType: resp.AgentType,
		Success:   resp.Success,
		Error:     resp.Error,
	}

	if resp.Metadata != nil {
		httpResp.Metadata = &ExecutionMetadataHTTP{
			TotalSteps:      int(resp.Metadata.TotalSteps),
			ToolsCalled:     int(resp.Metadata.ToolsCalled),
			ToolNames:       resp.Metadata.ToolNames,
			ExecutionTimeMs: resp.Metadata.ExecutionTimeMs,
			State:           resp.Metadata.State,
		}
	}

	gw.sendJSON(w, httpResp)
}

// handleStreamChat å¤„ç†æµå¼å¯¹è¯ï¼ˆWebSocketï¼‰
func (gw *HTTPGateway) handleStreamChat(w http.ResponseWriter, r *http.Request) {
	// å‡çº§åˆ°WebSocket
	conn, err := gw.upgrader.Upgrade(w, r, nil)
	if err != nil {
		http.Error(w, err.Error(), http.StatusBadRequest)
		return
	}
	defer conn.Close()

	// è¯»å–è¯·æ±‚
	var req ChatRequestHTTP
	if err := conn.ReadJSON(&req); err != nil {
		fmt.Printf("âŒ WebSocketè¯»å–è¯·æ±‚å¤±è´¥: %v\n", err)
		conn.WriteJSON(map[string]interface{}{
			"type":  "error",
			"error": err.Error(),
		})
		return
	}

	fmt.Printf("ğŸ“¨ æ”¶åˆ°WebSocketè¯·æ±‚: query=%s, agent=%s, stream=true\n", req.Query, req.AgentType)

	// ç›´æ¥åœ¨è¿™é‡Œå®ç°æµå¼é€»è¾‘ï¼Œä¸é€šè¿‡ gRPC
	startTime := time.Now()

	// è½¬æ¢ä¸ºgRPCè¯·æ±‚æ ¼å¼
	grpcReq := &pb.ChatRequest{
		Query:        req.Query,
		AgentType:    gw.parseAgentType(req.AgentType),
		Model:        req.Model,
		SystemPrompt: req.SystemPrompt,
		MaxSteps:     int32(req.MaxSteps),
		Config:       req.Config,
		SessionId:    req.SessionID,
	}

	// åˆ›å»ºæˆ–è·å–ä¼šè¯
	agentCtx, err := gw.grpcServer.getOrCreateSession(grpcReq)
	if err != nil {
		conn.WriteJSON(map[string]interface{}{
			"type":  "error",
			"error": err.Error(),
		})
		return
	}

	// åˆ›å»ºæ‰§è¡Œå™¨
	executor, err := gw.grpcServer.createExecutor(grpcReq, agentCtx)
	if err != nil {
		conn.WriteJSON(map[string]interface{}{
			"type":  "error",
			"error": err.Error(),
		})
		return
	}

	// åˆ›å»ºæ¶ˆæ¯ç›‘å¬é€šé“
	messageChan := make(chan core.Message, 100)
	resultChan := make(chan string, 1)
	done := make(chan bool, 1)

	// å¯åŠ¨æ¶ˆæ¯ç›‘å¬å™¨
	go gw.grpcServer.monitorExecution(agentCtx.GetMemory(), messageChan, done)

	// åœ¨æ–°çš„goroutineä¸­æ‰§è¡Œ
	go func() {
		defer close(done)
		result := executor.Run(grpcReq.Query)

		// ç­‰å¾…ä¸€å°æ®µæ—¶é—´ç¡®ä¿æ‰€æœ‰æ¶ˆæ¯éƒ½è¢«ç›‘å¬åˆ°
		time.Sleep(200 * time.Millisecond)
		resultChan <- result
	}()

	// æµå¼å‘é€æ‰§è¡Œè¿‡ç¨‹
	step := 0
	var finalResult string
	executing := true

	for executing {
		select {
		case msg, ok := <-messageChan:
			if !ok {
				// æ¶ˆæ¯é€šé“å…³é—­ï¼Œå‡†å¤‡å‘é€æœ€ç»ˆç»“æœ
				executing = false
				break
			}

			step++
			msgType, content := gw.grpcServer.parseMessage(msg)
			typeStr := gw.getMessageTypeString(msgType)

			fmt.Printf("ğŸ“¤ å‘é€æ¶ˆæ¯ [æ­¥éª¤%d, ç±»å‹:%s]: %s\n", step, typeStr, content[:min(50, len(content))])

			// å‘é€æ¶ˆæ¯åˆ°å‰ç«¯
			if err := conn.WriteJSON(map[string]interface{}{
				"type":    typeStr,
				"content": content,
				"step":    step,
			}); err != nil {
				fmt.Printf("âŒ å‘é€æ¶ˆæ¯å¤±è´¥: %v\n", err)
				return
			}

		case result := <-resultChan:
			// æ”¶åˆ°æœ€ç»ˆç»“æœ
			finalResult = result

			// ç»§ç»­ç­‰å¾…å‰©ä½™æ¶ˆæ¯
			time.Sleep(100 * time.Millisecond)
		}
	}

	// ç­‰å¾…æœ€ç»ˆç»“æœï¼ˆå¦‚æœè¿˜æ²¡æ”¶åˆ°ï¼‰
	if finalResult == "" {
		finalResult = <-resultChan
	}

	// å‘é€æœ€ç»ˆç»“æœ
	toolNames := gw.grpcServer.extractToolNames(agentCtx.GetMemory())

	fmt.Printf("âœ… å‘é€æœ€ç»ˆç»“æœ: %s (æ€»æ­¥éª¤: %d, å·¥å…·: %v)\n",
		finalResult[:min(50, len(finalResult))], executor.GetCurrentStep(), toolNames)

	conn.WriteJSON(map[string]interface{}{
		"type":    "final",
		"content": finalResult,
		"metadata": map[string]interface{}{
			"total_steps":       executor.GetCurrentStep(),
			"tools_called":      len(toolNames),
			"tool_names":        toolNames,
			"execution_time_ms": time.Since(startTime).Milliseconds(),
			"state":             string(executor.GetState()),
		},
	})
}

// handleListAgents è·å–Agentç±»å‹åˆ—è¡¨
func (gw *HTTPGateway) handleListAgents(w http.ResponseWriter, r *http.Request) {
	if r.Method == "OPTIONS" {
		w.WriteHeader(http.StatusOK)
		return
	}

	resp, err := gw.grpcServer.ListAgentTypes(r.Context(), &pb.Empty{})
	if err != nil {
		gw.sendError(w, http.StatusInternalServerError, err.Error())
		return
	}

	types := make([]map[string]interface{}, len(resp.Types))
	for i, t := range resp.Types {
		types[i] = map[string]interface{}{
			"type":        gw.getAgentTypeString(t.Type),
			"name":        t.Name,
			"description": t.Description,
			"available":   t.Available,
		}
	}

	gw.sendJSON(w, map[string]interface{}{
		"agents": types,
	})
}

// handleListTools è·å–å·¥å…·åˆ—è¡¨
func (gw *HTTPGateway) handleListTools(w http.ResponseWriter, r *http.Request) {
	if r.Method == "OPTIONS" {
		w.WriteHeader(http.StatusOK)
		return
	}

	resp, err := gw.grpcServer.ListTools(r.Context(), &pb.Empty{})
	if err != nil {
		gw.sendError(w, http.StatusInternalServerError, err.Error())
		return
	}

	tools := make([]map[string]interface{}, len(resp.Tools))
	for i, t := range resp.Tools {
		tools[i] = map[string]interface{}{
			"name":        t.Name,
			"description": t.Description,
			"type":        t.Type,
		}
	}

	gw.sendJSON(w, map[string]interface{}{
		"tools": tools,
	})
}

// è¾…åŠ©æ–¹æ³•

func (gw *HTTPGateway) corsMiddleware(next http.Handler) http.Handler {
	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
		w.Header().Set("Access-Control-Allow-Origin", "*")
		w.Header().Set("Access-Control-Allow-Methods", "GET, POST, OPTIONS")
		w.Header().Set("Access-Control-Allow-Headers", "Content-Type, Authorization")

		if r.Method == "OPTIONS" {
			w.WriteHeader(http.StatusOK)
			return
		}

		next.ServeHTTP(w, r)
	})
}

func (gw *HTTPGateway) sendJSON(w http.ResponseWriter, data interface{}) {
	w.Header().Set("Content-Type", "application/json")
	json.NewEncoder(w).Encode(data)
}

func (gw *HTTPGateway) sendError(w http.ResponseWriter, code int, message string) {
	w.Header().Set("Content-Type", "application/json")
	w.WriteHeader(code)
	json.NewEncoder(w).Encode(map[string]string{
		"error": message,
	})
}

func (gw *HTTPGateway) parseAgentType(typeStr string) pb.AgentType {
	switch typeStr {
	case "react", "REACT":
		return pb.AgentType_REACT
	case "chain", "CHAIN":
		return pb.AgentType_CHAIN
	case "plan", "PLAN":
		return pb.AgentType_PLAN
	case "sql", "SQL":
		return pb.AgentType_SQL
	default:
		return pb.AgentType_REACT
	}
}

func (gw *HTTPGateway) getAgentTypeString(t pb.AgentType) string {
	switch t {
	case pb.AgentType_REACT:
		return "react"
	case pb.AgentType_CHAIN:
		return "chain"
	case pb.AgentType_PLAN:
		return "plan"
	case pb.AgentType_SQL:
		return "sql"
	default:
		return "unknown"
	}
}

// HTTP è¯·æ±‚/å“åº”ç±»å‹

type ChatRequestHTTP struct {
	Query        string            `json:"query"`
	AgentType    string            `json:"agent_type"`
	Model        string            `json:"model"`
	SystemPrompt string            `json:"system_prompt,omitempty"`
	MaxSteps     int               `json:"max_steps,omitempty"`
	Config       map[string]string `json:"config,omitempty"`
	SessionID    string            `json:"session_id,omitempty"`
}

type ChatResponseHTTP struct {
	Response  string                 `json:"response"`
	AgentType string                 `json:"agent_type"`
	Metadata  *ExecutionMetadataHTTP `json:"metadata,omitempty"`
	Success   bool                   `json:"success"`
	Error     string                 `json:"error,omitempty"`
}

type ExecutionMetadataHTTP struct {
	TotalSteps      int      `json:"total_steps"`
	ToolsCalled     int      `json:"tools_called"`
	ToolNames       []string `json:"tool_names"`
	ExecutionTimeMs int64    `json:"execution_time_ms"`
	State           string   `json:"state"`
}

// getMessageTypeString å°† gRPC æ¶ˆæ¯ç±»å‹è½¬æ¢ä¸ºå­—ç¬¦ä¸²
func (gw *HTTPGateway) getMessageTypeString(t pb.ChatStreamResponse_MessageType) string {
	switch t {
	case pb.ChatStreamResponse_THINKING:
		return "thinking"
	case pb.ChatStreamResponse_ACTION:
		return "action"
	case pb.ChatStreamResponse_OBSERVATION:
		return "observation"
	case pb.ChatStreamResponse_FINAL:
		return "final"
	case pb.ChatStreamResponse_ERROR:
		return "error"
	case pb.ChatStreamResponse_METADATA:
		return "metadata"
	default:
		return "unknown"
	}
}

// StartHTTPServer å¯åŠ¨HTTPæœåŠ¡å™¨
func StartHTTPServer(addr string, grpcServer *AgentServer) error {
	gateway := NewHTTPGateway(grpcServer)
	router := gateway.SetupRoutes()

	// å¯åŠ¨ä¼šè¯æ¸…ç†å®šæ—¶å™¨
	go func() {
		ticker := time.NewTicker(5 * time.Minute)
		defer ticker.Stop()
		for range ticker.C {
			grpcServer.CleanupSessions()
		}
	}()

	fmt.Printf("ğŸŒ HTTPæœåŠ¡å™¨å¯åŠ¨åœ¨ %s\n", addr)
	fmt.Printf("ğŸ“¡ APIç«¯ç‚¹: http://%s/api\n", addr)
	fmt.Printf("ğŸŒ å‰ç«¯ç•Œé¢: http://%s\n", addr)

	return http.ListenAndServe(addr, router)
}
